# amplifier-embody

./: .env.example  .gitignore  BACKEND_ARCHITECTURE.md  EXPERIENCE_SPEC.md  README.md  pyproject.toml
.embody/collections/embody/: collection.md
.embody/collections/embody/agents/: concept-generator.md  context-gatherer.md  documentation-builder.md  refinement-engine.md
.embody/profiles/: default.md
backend/: __init__.py  pyproject.toml  service.py  session_manager.py
backend/exporters/: __init__.py  css_variables.py  figma_tokens.py  tailwind_config.py
backend/foundation/: __init__.py  profile_loader.py  state_persistence.py  token_extractor.py
docs/planning/: CONTRIBUTING_TO_AMPLIFIER.md  ROADMAP.md
docs/research/: USERS.md
docs/setup/: DEVELOPMENT.md  SETUP.md
docs/specs/: BACKEND_ARCHITECTURE.md  EXPERIENCE_SPEC.md
frontend/: package.json
