[project]
name = "amplifier-embody"
version = "0.1.0"
description = "Amplifier-powered design system exploration tool"
requires-python = ">=3.11"
authors = [
    {name = "Embody Team"}
]
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
